--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 <body class="theme-light">
     <div class="app">
         <header class="header">
-            <h1>Work Time Tracker Pro</h1>
+            <h1>Work Time Tracker</h1>
             <p>Erfassen und analysieren Sie Ihre Arbeitszeit effizient</p>
         </header>
 
